[package]
name = "rusty_buntdb"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/bartlomieju/rusty_buntdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btreec = { version = "0.1.0", path = "../btree.c" }
once_cell = "1.8.0"